# explorecosmo

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CollectionsPanel.vue  ConnectionModal.vue  ConnectionsPanel.vue  DataGrid.vue  QueryEditor.vue  RowDrawer.vue
src/layouts/: main.vue
src/lib/: connections.ts  cosmos.ts  exporters.ts  grid.ts  queries.ts  sample-data.ts  storage.ts  types.ts
src/lib/__tests__/: connections.test.ts  grid.test.ts  queries.test.ts
src/styles/: app.css
src/views/: Home.vue
